Add return to location button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
   <!--JS -->
   <script src="js/jquery-3.1.1.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDPGOlBSeCZeblWmqpoeYgTRR3yTj5OjY"></script>
   <script src="js/map.js"></script>
 </head>
 <body>
@@ -26,8 +25,11 @@
     </div>
     <img src="images/filter.png" class="filter" alt="filter" />
   </header>
-  <div id="map-canvas">
-  <img src="images/currentloc.png" class="currentloc" alt="Current Location" />
+  <div id="map">
   </div>
+<!--JS -->
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD68gHPXcMUS-A6HzCSZpie0IhlarST6bc">
+    </script>
 </body>
 </html>
